Bug 168310 - Okular crashes if you use 'Speak current page'. This was only tested with no document loaded.
Summary: Okular crashes if you use 'Speak current page'. This was only tested with no ...
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-04 10:55 UTC by Luísa Lourenço
Modified: 2008-08-04 12:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luísa Lourenço 2008-08-04 10:55:50 UTC
Version:           0.7 (using KDE 4.1.0)
Installed from:    Unlisted Binary Package
Compiler:           This was installed through a Arch Linux package (which was not listed)
OS:                Linux

To replicate this bug:
- start Okular
- go to tools-> Speak current page

Now it should crash with a SIGSEGV:

Application: Okular (okular), signal SIGSEGV
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb64e1700 (LWP 8980)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0xb4e90837 in PageViewItem::page () from /usr/lib/kde4/okularpart.so
#7  0xb4e8579a in PageView::slotSpeakCurrentPage ()
   from /usr/lib/kde4/okularpart.so
#8  0xb4e8bc25 in PageView::qt_metacall () from /usr/lib/kde4/okularpart.so
#9  0xb76a485b in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb76a4b30 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb6beeec1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#12 0xb6bef837 in QAction::activate () from /usr/lib/libQtGui.so.4
#13 0xb6f69252 in ?? () from /usr/lib/libQtGui.so.4
#14 0x090c4fa8 in ?? ()
#15 0x00000000 in ?? ()
#0  0xb7ff4424 in __kernel_vsyscall ()
Comment 1 Pino Toscano 2008-08-04 12:17:20 UTC
SVN commit 841918 by pino:

Enable the text-to-speech actions only when there is a document loaded (other than KTTS being present, of course).

BUG: 168310


 M  +18 -9     pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=841918
Comment 2 Pino Toscano 2008-08-04 12:21:27 UTC
SVN commit 841925 by pino:

Backport: enable the text-to-speech actions only when there is a document loaded (other than KTTS being present, of course).
This will be in KDE 4.1.1.

CCBUG: 168310


 M  +18 -9     pageview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=841925
Comment 3 Luísa Lourenço 2008-08-04 12:28:47 UTC
I'm confused with the comment:
This is 'RESOLVED FIXED' because it won't crash in KDE 4.1.1 or because you think people shouldn't use the option with no document loaded? 
Comment 4 Pino Toscano 2008-08-04 12:33:49 UTC
> This is 'RESOLVED FIXED' because it won't crash in KDE 4.1.1

Yes.