Enable the text-to-speech actions only when there is a document loaded (other than KTTS being present, of course).

BUG: 168310

svn path=/trunk/KDE/kdegraphics/okular/; revision=841918